Removed image, updated interactive cell execution instruction

--- a/notebooks/suora.ipynb
+++ b/notebooks/suora.ipynb
@@ -2,25 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "945de8cf",
-   "metadata": {},
-   "source": [
-    "```{figure} ../images/rovaniemi.png\n",
-    "---\n",
-    "align: left\n",
-    "name: kuva-suora\n",
-    "---\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "d515c2c3",
    "metadata": {},
    "source": [
     "# Suora\n",
     "Suoran parametrit ovat kulmakerroin ja vakiotermi. Tutustutaan seuraavaksi miten nämä vaikuttavat suoran yhtälöön sekä suoran kuvaajaan:\n",
-    "Klikkaa raketti-ikonia ja valitse 'Live Code'. Paina tämän jälkeen 'Run'. Säädä liukusäätimiä käyttäen suoran parametreja, suoran kuvaaja sekä sen yläpuolella oleva suoran yhtälö (ratkaistu muoto) päivittyy automaattisesti."
+    "Klikkaa raketti-ikonia ja valitse 'Live Code'. Paina tämän jälkeen 'restart & run all'. Säädä liukusäätimiä käyttäen suoran parametreja, suoran kuvaaja sekä sen yläpuolella oleva suoran yhtälö (ratkaistu muoto) päivittyy automaattisesti."
    ]
   },
   {
