Updated extra navbar text and interactive cell execution instruction

--- a/notebooks/suora.ipynb
+++ b/notebooks/suora.ipynb
@@ -6,8 +6,7 @@
    "metadata": {},
    "source": [
     "# Suora\n",
-    "Suoran parametrit ovat kulmakerroin ja vakiotermi. Tutustutaan seuraavaksi miten nämä vaikuttavat suoran yhtälöön sekä suoran kuvaajaan:\n",
-    "Klikkaa raketti-ikonia ja valitse 'Live Code'. Paina tämän jälkeen 'restart & run all'. Säädä liukusäätimiä käyttäen suoran parametreja, suoran kuvaaja sekä sen yläpuolella oleva suoran yhtälö (ratkaistu muoto) päivittyy automaattisesti."
+    "Suoran parametrit ovat kulmakerroin ja vakiotermi. Tutustutaan miten nämä vaikuttavat suoran yhtälöön (nk. ratkaistussa muodossa) sekä suoran kuvaajaan: Klikkaa {fa}`rocket` --> {guilabel}`Live Code`. Paina tämän jälkeen 'run'. Säädä liukusäätimillä suoran parametreja, suoran kuvaaja sekä sen yläpuolella oleva suoran yhtälö päivittyvät automaattisesti."
    ]
   },
   {
