Updated extra navbar and minor notebook update

--- a/notebooks/suora.ipynb
+++ b/notebooks/suora.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Suora\n",
-    "Suoran parametrit ovat kulmakerroin ja vakiotermi. Tutustutaan miten nämä vaikuttavat suoran yhtälöön (nk. ratkaistussa muodossa) sekä suoran kuvaajaan: Klikkaa raketti-ikonia ja valitse 'Live Code'. Paina tämän jälkeen 'run'. Säädä liukusäätimillä suoran parametreja, suoran kuvaaja sekä sen yläpuolella oleva suoran yhtälö päivittyvät automaattisesti."
+    "Suora voidaan määrittää kulmakertoimella ja vakiotermillä. Tutustutaan niiden vaikutusta suoran yhtälöön (nk. ratkaistussa muodossa) sekä suoran kuvaajaan: Klikkaa raketti-ikonia ja valitse 'Live Code'. Paina tämän jälkeen 'run'. Säädä liukusäätimillä suoran parametreja, suoran kuvaaja sekä sen yläpuolella oleva suoran yhtälö päivittyvät automaattisesti."
    ]
   },
   {
@@ -95,7 +95,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
